# Pi-Sin-Tech-Squad

hack-front/: .env  .env.example  .gitignore  CONVENTIONS.md  Dockerfile  build.sh  docker-compose.yml  nginx.conf  package-lock.json  package.json
hack-front/src/: App.css  App.js
hack-front/src/components/: ImageEditor.js  Navbar.css  Navbar.js
hack-front/src/components/ui/: Button.css  Button.js  Dropdown.css  Dropdown.js  Form.css  Form.js  Input.css  Input.js  index.js
hack-front/src/components/ui/Table/: Table.css  Table.js
hack-front/src/pages/: ComponentsDemo.css  ComponentsDemo.js  Login.js  PhotoDetail.js  ProjectPhotos.js  Projects.js  TableDemo.js
hack-front/src/store/: authContext.js
hack-front/src/styles/: Login.css  PhotoDetail.css  ProjectPhotos.css  Projects.css  variables.css
hack-yolo-worker/: .gitignore  Dockerfile  build.sh  pyproject.toml
hack-yolo-worker/src/: api.py  config.py  dto.py  main.py  starter.py  worker.py  yolo.py
server/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.sh  pyproject.toml
server/migrations/: 001__init.sql
server/src/: main.py  starter.py  yoyo.ini
server/src/controllers/: vast_controller.py
server/src/dao/: account.py  activate_link.py  base.py  project.py  project_file.py
server/src/panda/: panda_client.py
server/src/rest/: auth_endpoint.py  file_endpoint.py  project_endpoint.py  router_init.py  system_endpoint.py  yolo_endpoint.py
server/src/rest/models/: login_data.py  login_response.py  panda_data.py  project.py  project_file.py  token_data.py  user_data.py  user_response_data.py  version_data.py
server/src/service/: auth_service.py  file_service.py  image_service.py  panda_service.py  project_service.py  s3.py  vast_service.py  worker_service.py
server/src/utils/: config.py  logger.py  shutdown.py
